# blaug

./: Cargo.toml  README.md
assets/css/: blog_posts.css
assets/posts/: my_first_post.md
src/: main.rs
src/blog/: posts.rs
src/templates/: index.html
static/: package-lock.json  package.json
static/blog/html/: index.html
static/blog/posts/: second_post.md
static/posts/: my_first_post.md  second_post.md
static/styles/: blog_posts.css
templates/: blog.html  blog_post.html
