[package]
name = "blaug"
version = "0.1.0"
authors = ["Rusty Roberts <rust.roberts@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.4.0"
markdown = "0.3"
tera = "1"
lazy_static = "1.4.0"
