[package]
name = "blaug"
version = "0.1.0"
authors = ["Rusty Roberts <rust.roberts@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tide-tera = "0.2.4"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
markdown = "0.3"
tera = "1"
